# django-gsm

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
gsm_app/: asgi.py  permissions.py  settings.py  tasks.py  urls.py  wsgi.py
organizations/: admin.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
organizations/migrations/: 0001_initial.py  0002_shop_users_alter_shop_organization_id.py
socketio_node/: index.html  index.js  package-lock.json  package.json
